Removed boilerplate info
Replaced with real author infos

--- a/package.json
+++ b/package.json
@@ -3,26 +3,17 @@
   "version": "1.0.0",
   "description": "An electron wrapped client for Tidal",
   "main": "main.js",
-  "scripts": {
-    "start": "electron main.js"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/atom/electron-quick-start.git"
+    "url": "git+https://github.com/Bunkerbewohner/tidal-music-linux.git"
   },
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial"
-  ],
-  "author": "GitHub",
+  "author": "Bunkerbewohner",
   "license": "CC0-1.0",
   "bugs": {
-    "url": "https://github.com/atom/electron-quick-start/issues"
+    "url": "https://github.com/Bunkerbewohner/tidal-music-linux/issues"
   },
-  "homepage": "https://github.com/atom/electron-quick-start#readme",
-  "devDependencies": {
-    "electron": "^1.0"
+  "homepage": "https://github.com/Bunkerbewohner/tidal-music-linux",
+  "dependencies": {
+    "dbus-native": "^0.2.5"
   }
 }
