--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Bunkerbewohner/tidal-music-linux",
   "dependencies": {
-    "dbus-native": "^0.2.5"
+    "dbus-native": "^0.2.5",
+    "electron": "^3.0.4"
   }
 }
