Change package.json license to MIT to match the rest of the project

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "Mathias Kahl <mathias.kahl@gmail.com>",
     "Andrew Lee <andrewl@mbda.fun>"
   ],
-  "license": "CC0-1.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Bunkerbewohner/tidal-music-linux/issues"
   },
