--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tidal-music-linux",
   "version": "1.0.0",
-  "description": "An electron wrapped client for Tidal",
+  "description": "An electron wrapped client for TIDAL",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
@@ -24,11 +24,12 @@
     "appId": "io.github.bunkerbewohner.tidal",
     "linux": {
       "category" : "Music",
+      "icon": "icon.png",
       "target" : [
         "AppImage",
         "tar.xz"
       ],
-      "icon": "icon.png"
+      "synopsis":  "An electron wrapped client for TIDAL"
     }
   },
   "homepage": "https://github.com/Bunkerbewohner/tidal-music-linux",
